Feat: Save metadata (#31)
* feat(db): Initial database scheme

* feat: Endpoint to save metadata of a given file

* fix: Save metadata of a given directory

* fix(cd): Define main class to be runned from Docker

* docs: Add examples of REST request for the new endpoint

* style: Format files with `scalafmt`

* chore: Remove sample package

* chore: Delete sample tests package
